# rewrite-impl-trait-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
examples/: edge_cases.rs  function.rs  struct_impl.rs  trait.rs  trait_impl.rs
src/: lib.rs
